--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yworks/react-yfiles-process-mining",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "author": {
     "name": "yFiles for HTML team @ yWorks GmbH",
     "email": "yfileshtml@yworks.com"
@@ -50,7 +50,7 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "yfiles": "^26.0.0"
+    "@yfiles/yfiles": ">=30"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
